# smol_otel

./: Cargo.toml  README.md
examples/: metrics.rs  nested.rs  nested_spans.rs
src/: counter.rs  gauge.rs  globals.rs  lib.rs  logger.rs  main.rs  metric_base.rs  metrics.rs  span.rs  span_builder.rs  span_context.rs  span_guard.rs  structs.rs  tracer.rs  utilities.rs
